# ardrone_command

./: .directory  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README  buildLog  cmake_install.cmake  log  package.xml
catkin_generated/: ardrone_application_node-msg-extras.cmake.develspace.in  ardrone_application_node-msg-extras.cmake.installspace.in  ardrone_command-msg-extras.cmake.installspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: _setup_util.py  ardrone_application_node-msg-paths.cmake  ardrone_application_node.pc  ardrone_application_nodeConfig.cmake  ardrone_command-msg-paths.cmake  ardrone_command.pc  ardrone_commandConfig.cmake
catkin_generated/stamps/ardrone_application_node/: package.xml.stamp
catkin_generated/stamps/ardrone_command/: package.xml.stamp
cmake/: ardrone_application_node-genmsg-context.py  ardrone_application_node-genmsg.cmake  ardrone_command-genmsg-context.py  ardrone_command-genmsg.cmake
devel/: .catkin  .rosinstall  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/ardrone_application_node/: serialized_ardrone_command.h  serialized_ardrone_command_part.h
devel/include/ardrone_command/: commandInterface.h  commandInterfaceRequest.h  commandInterfaceResponse.h  serialized_ardrone_command.h  serialized_ardrone_command_part.h
devel/lib/ardrone_application_node/: ardrone_application_node
devel/lib/ardrone_command/: ardrone_command
devel/lib/pkgconfig/: ardrone_application_node.pc  ardrone_command.pc
devel/lib/python2.7/dist-packages/ardrone_application_node/msg/: __init__.py  _serialized_ardrone_command.py  _serialized_ardrone_command_part.py
devel/lib/python2.7/dist-packages/ardrone_command/msg/: _serialized_ardrone_command.py  _serialized_ardrone_command_part.py
devel/lib/python2.7/dist-packages/ardrone_command/srv/: __init__.py  _commandInterface.py
devel/share/ardrone_application_node/cmake/: ardrone_application_node-msg-paths.cmake  ardrone_application_nodeConfig.cmake
devel/share/ardrone_command/cmake/: ardrone_command-msg-extras.cmake  ardrone_command-msg-paths.cmake  ardrone_commandConfig.cmake
devel/share/common-lisp/ros/ardrone_application_node/msg/: _package.lisp  _package_serialized_ardrone_command.lisp  _package_serialized_ardrone_command_part.lisp  ardrone_application_node-msg.asd  serialized_ardrone_command.lisp  serialized_ardrone_command_part.lisp
devel/share/common-lisp/ros/ardrone_command/msg/: _package.lisp  _package_serialized_ardrone_command.lisp  _package_serialized_ardrone_command_part.lisp  ardrone_command-msg.asd  serialized_ardrone_command.lisp  serialized_ardrone_command_part.lisp
devel/share/common-lisp/ros/ardrone_command/srv/: _package.lisp  _package_commandInterface.lisp  ardrone_command-srv.asd  commandInterface.lisp
gtest/: CTestTestfile.cmake  Makefile
include/ardrone_command/: ARDroneControllerNode.hpp  ARDroneEnums.hpp  QRCodeBasedPoseInformation.hpp  command.hpp  tagTrackingInfo.hpp
msg/: altitude_control_state.msg  command_status_info.msg  qr_code_state_info.msg  qr_go_to_point_control_info.msg  qr_orientation_control_info.msg  serialized_ardrone_command.msg  serialized_ardrone_command_part.msg  test.msg
src/: ARDroneControllerNode.cpp  ARDroneControllerNode.hpp  ARDroneEnums.hpp  QRCodeBasedPoseInformation.cpp  SOMException.hpp  ardrone_application_node.cpp  command.cpp  command.hpp  tagTrackingInfo.cpp
src/exec/: ardrone_application_node.cpp
src/lib/: ARDroneControllerNode.cpp  QRCodeBasedPoseInformation.cpp  command.cpp  listOfInformationItMightBeGoodToHaveFromARDroneCommand  notes
src/old/: clockExample  oldFlightPlan  oldLowLevelBehavior  oldLowLevelBehaviorFunction
srv/: commandInterface.srv
